--- a/rxviewobserver-sample/build.gradle
+++ b/rxviewobserver-sample/build.gradle
@@ -1,4 +1,12 @@
 apply plugin: 'com.android.application'
+apply plugin: 'com.android.databinding'
+
+buildscript {
+    dependencies {
+        classpath "com.android.databinding:dataBinder:1.0-rc1"
+    }
+}
+
 
 android {
     compileSdkVersion 22
@@ -20,7 +28,7 @@ android {
 }
 
 dependencies {
-    compile 'io.reactivex:rxjava:1.0.14'
+    compile rootProject.ext.rxJava;
     compile 'com.android.support:support-annotations:22.2.1'
     compile 'com.android.support:appcompat-v7:22.2.1'
 
