--- a/rxviewobserver/build.gradle
+++ b/rxviewobserver/build.gradle
@@ -19,8 +19,8 @@ android {
 }
 
 dependencies {
+    compile rootProject.ext.rxJava;
     compile 'com.android.support:support-annotations:22.2.1'
-    compile 'io.reactivex:rxjava:1.0.14'
 
     testCompile 'junit:junit:4.12'
 }
