--- a/build.gradle
+++ b/build.gradle
@@ -5,7 +5,7 @@ subprojects {
             jcenter()
         }
         dependencies {
-            classpath 'com.android.tools.build:gradle:1.3.0'
+            classpath 'com.android.tools.build:gradle:1.3.1'
 
             // NOTE: Do not place your application dependencies here; they belong
             // in the individual module build.gradle files
@@ -20,6 +20,11 @@ allprojects {
 }
 
 ext {
-    buildToolsVersion = '23.0.0 rc3'
+    buildToolsVersion = '23.0.0'
+    compileSdkVersion = 23
+    minSdkVersion = 9
+    targetSdkVersion = 22
+
     rxJava = 'io.reactivex:rxjava:1.0.14'
+    annotation = 'com.android.support:support-annotations:22.2.1'
 }
