--- a/rxviewobserver-sample/build.gradle
+++ b/rxviewobserver-sample/build.gradle
@@ -9,13 +9,13 @@ buildscript {
 
 
 android {
-    compileSdkVersion 22
-    buildToolsVersion rootProject.ext.buildToolsVersion;
+    compileSdkVersion rootProject.ext.compileSdkVersion
+    buildToolsVersion rootProject.ext.buildToolsVersion
 
     defaultConfig {
-        applicationId "jp.satoshun.rxviewobserver.sample"
-        minSdkVersion 9
-        targetSdkVersion 22
+        applicationId "com.github.satoshun.rxviewobserver.sample"
+        minSdkVersion rootProject.ext.minSdkVersion
+        targetSdkVersion rootProject.ext.targetSdkVersion
         versionCode 1
         versionName "1.0"
     }
@@ -29,7 +29,7 @@ android {
 
 dependencies {
     compile rootProject.ext.rxJava;
-    compile 'com.android.support:support-annotations:22.2.1'
+    compile rootProject.ext.annotation
     compile 'com.android.support:appcompat-v7:22.2.1'
 
     compile project(':rxviewobserver')
