--- a/rxviewobserver-sample/src/main/AndroidManifest.xml
+++ b/rxviewobserver-sample/src/main/AndroidManifest.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-    package="jp.satoshun.rxviewobserver.sample" >
+    package="com.github.satoshun.rxviewobserver.sample" >
 
     <application
         android:allowBackup="true"
