--- a/rxviewobserver/build.gradle
+++ b/rxviewobserver/build.gradle
@@ -1,12 +1,12 @@
 apply plugin: 'com.android.library'
 
 android {
-    compileSdkVersion 22
-    buildToolsVersion rootProject.ext.buildToolsVersion;
+    compileSdkVersion rootProject.ext.compileSdkVersion
+    buildToolsVersion rootProject.ext.buildToolsVersion
 
     defaultConfig {
-        minSdkVersion 9
-        targetSdkVersion 22
+        minSdkVersion rootProject.ext.minSdkVersion
+        targetSdkVersion rootProject.ext.targetSdkVersion
         versionCode 1
         versionName "1.0"
     }
@@ -19,8 +19,8 @@ android {
 }
 
 dependencies {
-    compile rootProject.ext.rxJava;
-    compile 'com.android.support:support-annotations:22.2.1'
+    compile rootProject.ext.rxJava
+    compile rootProject.ext.annotation
 
     testCompile 'junit:junit:4.12'
 }
