--- a/rxviewobserver/src/main/AndroidManifest.xml
+++ b/rxviewobserver/src/main/AndroidManifest.xml
@@ -1,3 +1,3 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-    package="jp.satoshun.rxviewobserver">
+    package="com.github.satoshun.rxviewobserver">
 </manifest>
